--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -24,7 +24,6 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2",
-    "zod": "^3.22.4"
+    "razorpay": "^2.9.2"
   }
 }
