--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
