--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "cd.. &&  cd BACKEND && npm run dev",
+    "web": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
